Tailoring for AMNH.
Including collection-based and curatorial stuff into the research
statement. the "short" version of the research statement is now
a solid draft of what will go to AMNH.

--- a/research-statement-jro-main-short.tex
+++ b/research-statement-jro-main-short.tex
@@ -396,3 +396,137 @@ We will seek funding for the three stages of this work from the NSF
 Phylogenetic Systematics, Evolutionary Genetics, and Evolutionary Ecology
 Programs.
 
+
+\subsection*{Collection-Based Research}
+All of my empirical research described above is collection-based.
+Without the utility of natural history collections as biodiversity archives,
+my work would not be possible.
+My primary research questions require targeted collecting of particular
+Central and Southeast Asian taxa.
+An equally important aspect of my research program entails general 
+collecting of reptiles and amphibians to document the biodiversity of
+these understudied regions of the world.
+All of this work will involve the collection and deposition of specimens and
+tissue samples in the Herpetology and Ambrose Monell Cryo Collection,
+respectively.
+
+My duty as a collection-based scientist is to \textbf{\textit{advocate and
+advance the use, maintainence, and value of natural history collections for
+understanding the biodiversity of our planet.}}
+The primary challenge of curation is striking a balance between the use and
+long-term preservation of research material.
+However, I believe we are at the beginning of a major shift in how
+biodiversity data is distributed and used by scientists.
+This shift will greatly mitigate this challenge and transform the role of
+biodiversity collections.
+% Accordingly, I intend to fund such survey work
+% from sources such as the  NSF Biodiversity Inventories
+% Program and National Geographic Society.
+
+% The Herpetology collection at the Sam Noble Oklahoma Museum of Natural History
+% has impressive holdings of specimens from the United States and the Neotropics.
+% My research program would diversify the collection and strengthen Old World
+% sampling, particularly from Southeast Asia.
+
+\subsubsection*{Collection-Management Experience}
+I have served as the Curatorial Assistant (CA) for the Herpetology collections
+at the University of Kansas (KU) Biodiversity Institute and Louisiana State
+University Museum of Natural Science (LSUMNS).
+% , the former of which is one of
+% the largest collections of amphibians and reptiles in the United States.
+In the absence of a Collection Manager at both institutions, I was responsible
+for all aspects of managing the collection, including specimen preparation,
+accessions, cataloging, database management, loans, import/export permits, 
+general collection and wet lab upkeep, and public tours.
+Furthermore, while at KU, I have made several improvements to the collection
+database that have increased the efficiency and accuracy of digitizing new
+collection data.
+
+During my time at both KU and LSUMNS, we transferred the collection of tissue
+aliquots into state-of-the-art, long-term liquid nitrogen storage facilities.
+This gave me an appreciation for the importance of organization and database
+management for keeping track of auxiliary preparation types.
+I also experienced first hand how integral collection improvement grants are
+for the growth and long-term maintenance of biodiversity collections.
+
+
+\subsubsection*{The Future of Biodiversity Collections}
+In the near future, a typical museum specimen will be associated
+with a wealth of digital information that will be available in real-time
+to scientists around the world.
+In addition to the typical field data, there will be a genome sequence
+and a high-resolution, three-dimensional digital scan and x-ray for each
+specimen.
+Thus, the entire genetic blueprint and internal and external morphology of 
+each specimen will be a few keystrokes away from any computer in the world.
+While such a rich digital representation will never supplant the need for
+building and preserving collections of physical specimens, I believe the data
+will truly revolutionize the role of biodiversity collections in science and
+society.
+By greatly reducing the frequency at which specimens are physically transported
+and examined, the longevity of specimens will be extended.
+Also, if a specimen is ever damaged or lost, the utility of the specimen will
+be largely preserved in digital form.
+Most importantly, having such rich data available from millions of specimens
+across hundreds of institutions will greatly expand the types of research
+questions that can be addressed with natural history collections.
+Not only will this shift greatly benefit biodiversity science, it will also
+increase the prominence of collections and clearly demonstrate their importance
+to the public, policy-makers, funding agencies, and donors.
+
+
+\subsubsection*{The Future is Now}
+The future described above may seem distant.
+However, during my experience working in natural history collections, I have
+realized that there are many significant steps that need to be taken now.
+Many natural history specimens are already associated with a wealth of ancillary
+data that collection databases are ill-equipped to automatically consolidate,
+update, and serve to the community in real-time.
+For example, many specimens 
+have digital photographs and/or audio recordings,
+are associated with publications and sequences on
+\href{http://www.ncbi.nlm.nih.gov}{NCBI}, are included in molecular and
+morphological datasets deposited in repositories like
+\href{http://datadryad.org}{Dryad}, are tips on phylogenetic trees in
+\href{http://treebase.org}{TreeBASE}, or better yet, on the
+\href{http://opentreeoflife.org}{Open Tree of Life}.
+Collection databases need to be modernized so that they can serve
+as the central hub of information associated with the collection's
+physical holdings.
+
+Two steps are needed to accomplish this: (1) transforming how data is
+collected and added to the database, and (2) adding flexibility and automation
+to how ancillary data are incorporated and updated.
+
+\subsubsection*{Transforming data collection}
+Too much data is lost or corrupted between field collection and database entry.
+I am interested in developing portable, flexible, easy-to-use software
+that allows real-time digitization of data as it is collected in the field.
+The ultimate goal is to have software that can sync information such as
+GPS coordinates, photographs, audio-recordings, micro-habitat data, and
+weather data from wireless devices.
+% We already have electronic devices that can collect much of this data and can
+% communicate it via technologies such as Bluetooth.
+% So, much of the infrastructure for this is already in place.
+Not only will this make for richer and more accurate data associated with
+vouchers, but will also greatly increase the efficiency at which new
+data is disseminated to the scientific community.
+
+\subsubsection*{Automated updating of ancillary data}
+Too often valuable ancillary data never gets associated with specimens.
+It is impractical for collection staff to manually mine databases like NCBI,
+GenBank, Dryad, and TreeBASE in an effort to consolidate all of the information
+available for every specimen.
+I am interested in developing flexible database software that automatically
+scans such databases and updates the ancillary data as it comes online.
+The software should do this intelligently, flagging specimens whenever there
+are conflicting data (e.g., a phylogenetic placement conflicts with the current
+taxonomy).
+This will transform the collection database into the most current and
+comprehensive source for all data associated with its holdings.
+This, after all, should be the goal of all collections.
+
+% \section*{Museum-Based Education}
+% Similar to , 
+% Similar to curation, technology will greatly enhance museum-based education.
+
