--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -6,9 +6,9 @@
 Elucidating answers to this question is the primary motivation of my research
 program.
 To address this question, I use patterns of genetic variation within and among
-natural populations to identify independent evolutionary lineages (i.e.,
-species) and infer their demographic histories and relationships, testing for
-patterns predicted by current ecological factors and historical events.
+natural populations to infer their demographic histories and relationships,
+testing for patterns predicted by current ecological factors and historical
+events.
 I use a broad suite of methods in this endeavor, including
 % collection-based fieldwork,
 fieldwork,
@@ -192,7 +192,7 @@ latter to enable unprecedented power to understand historical processes of
 diversification across regions characterized by high levels of species richness
 and endemism.  Below I detail one such method, and three empirical systems that
 have inspired its development.
-Fieldwork involved in the empirical systems will result in the deposition of
+A large part of my empirical work will involve the collection and deposition of
 specimens and tissue samples in the Herpetology and Ambrose Monell Cryo
 Collection, respectively.
 
