Tailoring for nmnh.

--- a/research-statement-jro-main-short.tex
+++ b/research-statement-jro-main-short.tex
@@ -406,9 +406,9 @@ Central and Southeast Asian taxa.
 An equally important aspect of my research program entails general 
 collecting of reptiles and amphibians to document the biodiversity of
 these understudied regions of the world.
-All of this work will involve the collection and deposition of specimens and
-tissue samples in the Herpetology and Ambrose Monell Cryo Collection,
-respectively.
+All of this work would involve the collection and deposition of specimens and
+tissue samples in the Department of Vertebrate Zoology and Biorepository,
+respectively, at the National Museum of Natural History.
 
 My duty as a collection-based scientist is to \textbf{\textit{advocate and
 advance the use, maintainence, and value of natural history collections for
@@ -416,7 +416,7 @@ understanding the biodiversity of our planet.}}
 The primary challenge of curation is striking a balance between the use and
 long-term preservation of research material.
 However, I believe we are at the beginning of a major shift in how
-biodiversity data is distributed and used by scientists.
+biodiversity data are distributed and used by scientists.
 This shift will greatly mitigate this challenge and transform the role of
 biodiversity collections.
 % Accordingly, I intend to fund such survey work
@@ -488,20 +488,20 @@ are associated with publications and sequences on
 \href{http://www.ncbi.nlm.nih.gov}{NCBI}, are included in molecular and
 morphological datasets deposited in repositories like
 \href{http://datadryad.org}{Dryad}, are tips on phylogenetic trees in
-\href{http://treebase.org}{TreeBASE}, or better yet, on the
-\href{http://opentreeoflife.org}{Open Tree of Life}.
+\href{http://treebase.org/treebase-web/home.html}{TreeBASE}, or better yet, on
+the \href{http://opentreeoflife.org}{Open Tree of Life}.
 Collection databases need to be modernized so that they can serve
 as the central hub of information associated with the collection's
 physical holdings.
 
-Two steps are needed to accomplish this: (1) transforming how data is
+Two steps are needed to accomplish this: (1) transforming how data are
 collected and added to the database, and (2) adding flexibility and automation
 to how ancillary data are incorporated and updated.
 
 \subsubsection*{Transforming data collection}
-Too much data is lost or corrupted between field collection and database entry.
-I am interested in developing portable, flexible, easy-to-use software
-that allows real-time digitization of data as it is collected in the field.
+Too much data are lost or corrupted between field collection and database entry.
+I am interested in developing portable, flexible, easy-to-use software that
+allows real-time digitization of data as they are collected in the field.
 The ultimate goal is to have software that can sync information such as
 GPS coordinates, photographs, audio-recordings, micro-habitat data, and
 weather data from wireless devices.
@@ -510,15 +510,15 @@ weather data from wireless devices.
 % So, much of the infrastructure for this is already in place.
 Not only will this make for richer and more accurate data associated with
 vouchers, but will also greatly increase the efficiency at which new
-data is disseminated to the scientific community.
+data are disseminated to the scientific community.
 
 \subsubsection*{Automated updating of ancillary data}
-Too often valuable ancillary data never gets associated with specimens.
+Too often valuable ancillary data never get associated with specimens.
 It is impractical for collection staff to manually mine databases like NCBI,
 GenBank, Dryad, and TreeBASE in an effort to consolidate all of the information
 available for every specimen.
 I am interested in developing flexible database software that automatically
-scans such databases and updates the ancillary data as it comes online.
+scans such databases and updates the ancillary data as they come online.
 The software should do this intelligently, flagging specimens whenever there
 are conflicting data (e.g., a phylogenetic placement conflicts with the current
 taxonomy).
