Changing header for nmnh.

--- a/research-statement-jro.tex
+++ b/research-statement-jro.tex
@@ -114,7 +114,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\newcommand{\docTitle}{Research Statement\xspace}
+\newcommand{\docTitle}{Research \& Collections Statement\xspace}
 \begin{document}
 % \raggedright
 \singlespacing
