--- a/research-statement-jro.tex
+++ b/research-statement-jro.tex
@@ -27,21 +27,45 @@
 \usepackage{parskip}
 \usepackage{tabulary}
 \usepackage[normalem]{ulem}
-\usepackage{hyperref}
-\hypersetup{pdfborder={0 0 0}, colorlinks=true, urlcolor=blue, linkcolor=black}
 \usepackage[format=plain, labelsep=period, justification=raggedright, singlelinecheck=true, skip=2pt, font={footnotesize,sf}, labelfont=bf]{caption}
 \usepackage{titlesec}
 \usepackage{lastpage}
 \usepackage{fancyhdr}
 \usepackage{ifthen}
 \usepackage{wrapfig}
+\usepackage[para]{footmisc}
+
+%% Set up color palettes %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Color palette GreenOrange_6 from
+% https://jiffyclub.github.io/palettable/tableau/
+\definecolor{pgreen}     {RGB}{50,162,81}
+\definecolor{porange}    {RGB}{255,127,15}
+\definecolor{pblue}      {RGB}{60,183,204}
+\definecolor{pyellow}    {RGB}{255,217,74}
+\definecolor{pteal}      {RGB}{57,115,124}
+\definecolor{pauburn}    {RGB}{184,90,13}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\definecolor{mygray}{gray}{0.9}
+
+\usepackage{hyperref}
+\hypersetup{pdfborder={0 0 0},
+            colorlinks=true,
+            % colorlinks=false,
+            urlcolor=pteal,
+            linkcolor=pteal,
+            citecolor=pteal}
 \usepackage{cleveref}
 \crefformat{footnote}{#2\footnotemark[#1]#3}
 
 %\usepackage[round]{natbib}
 %\bibliographystyle{evolution}
 % \usepackage[style=nature]{biblatex}
-\usepackage[bibstyle=bib/joaks-statement,maxcitenames=3,mincitenames=2,backend=biber]{biblatex}
+\usepackage[bibstyle=bib/joaks-statement,
+    maxcitenames=3,
+    mincitenames=2,
+    backend=biber,
+    bibencoding=utf8,
+    date=year]{biblatex}
 
 \newrobustcmd*{\shortfullcite}{\AtNextCite{\renewbibmacro{title}{}\renewbibmacro{in:}{}\renewbibmacro{number}{}}\fullcite}
 
@@ -59,26 +83,23 @@
 \renewcommand{\footrulewidth}{0pt}
 
 %% Format section titles %%%%%%%%%%%%%%%%%%%%%%%%%
-\renewcommand\refname{Peer-reviewed Publications}
-
 \titleformat{\section}[hang]
     {\large\sffamily\bfseries}
     {\S\ \thesection.}{.5em}{}[]
 \titlespacing{\section}
-    {0mm}{1.0ex plus .1ex minus .1ex}{-0.5ex}
+    {0mm}{1.0ex plus .15ex minus .15ex}{0ex}
 
 \titleformat{\subsection}[hang]
     {\large\sffamily\itshape}
     {\S\ \thesection.}{.5em}{}[]
 \titlespacing{\subsection}
-    {0mm}{1.0ex plus .1ex minus .1ex}{-0.5ex}
+    {0mm}{0.5ex plus .1ex minus .1ex}{0ex}
 
 \titleformat{\subsubsection}[runin]
     {\sffamily\bfseries}
     {\S\ \thesection.}{.5em}{}[.---]
 \titlespacing{\subsubsection}
-    {\parindent}{0pt}{0pt}
-%    {\parindent}{1.0ex plus .1ex minus .1ex}{0pt}
+    {\parindent}{0.5ex plus .1ex minus .1ex}{0ex}
 
 %% Format list environments %%%%%%%%%%%%%%%%%%%%%%%%
 \renewcommand{\labelenumii}{\arabic{enumi}.\arabic{enumii}}
@@ -98,6 +119,22 @@
     \setlength{\parskip}{0pt}
     \setlength{\parsep}{0.5em}}
   {\end{itemize}}
+
+\newenvironment{tightItemize}{%
+\begin{itemize}[noitemsep, topsep=0pt, parsep=0pt, partopsep=0pt]}
+{\end{itemize}}
+
+\newenvironment{veryTightItemize}{%
+\begin{itemize}[noitemsep, topsep=0pt, parsep=0pt, partopsep=0pt, leftmargin=*]}
+{\end{itemize}}
+
+\newenvironment{tightEnumerate}{%
+\begin{enumerate}[noitemsep, topsep=0pt, parsep=0pt, partopsep=0pt]}
+{\end{enumerate}}
+
+\newenvironment{veryTightEnumerate}{%
+\begin{enumerate}[noitemsep, topsep=0pt, parsep=0pt, partopsep=0pt, leftmargin=*]}
+{\end{enumerate}}
 
 %% Basic formatting and spacing %%%%%%%%%%%%%%%%%%%%%
 \setlength{\parindent}{0em}
