Escaping space after initial in header.

--- a/research-statement-jro.tex
+++ b/research-statement-jro.tex
@@ -74,7 +74,7 @@
 %% Format headers and footers %%%%%%%%%%%%%%%%%%%%
 \pagestyle{fancy}
 %\lhead{\ifthenelse{\value{page}=1}{}{\sffamily\footnotesize Jamie Oaks}}
-\lhead{\sffamily \emph{\docTitle} \\ Jamie R. Oaks}
+\lhead{\sffamily \emph{\docTitle} \\ Jamie R.\ Oaks}
 %\chead{\ifthenelse{\value{page}=1}{{\scshape \docTitle} \\ Jamie Richard Oaks}{\sffamily\footnotesize \docTitle}}
 %\rhead{\ifthenelse{\value{page}=1}{}{\sffamily\footnotesize \today}}
 \rhead{\sffamily \today}
