Reworking intro for victoria.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -1,28 +1,28 @@
-%%%  \textbf{\textit{What processes control the generation of biodiversity?}}
-%%%  Elucidating answers to this question, in its broadest sense, is the primary
-%%%  motivation of my lab group.
-%%%  % To address this question, I use patterns of genetic variation within and among
-%%%  % natural populations to identify independent evolutionary lineages (i.e.,
-%%%  % species) and infer their demographic histories and relationships, testing for
-%%%  % patterns predicted by current ecological factors and historical events.
-%%%  We use a broad suite of methods in this endeavor, including
-Shared ancestry is a fundamental property of life.
-By providing a framework of accounting for the inherent
-% nonindependence
-% dependence
-covariation
-in biological data created by shared evolutionary history,
-phylogenetics is rapidly becoming the statistical foundation of comparative
-biology.
-While research interests in my lab
-are very diverse,
-% span biogeography, speciation, and molecular and genome evolution,
-\textbf{\textit{all of our work is unified by our common goal of using
-        phylogenetics to infer and explicitly account for shared ancestry in
-        our approaches to better understand
-        processes of evolution and biological diversification}}.
-        % evolution and biodiversity}}.
-My lab uses a broad suite of methods in this endeavor, including
+\textbf{\textit{What processes control the generation of biodiversity?}}
+Elucidating answers to this question, in its broadest sense, is the primary
+motivation of my lab group.
+% To address this question, I use patterns of genetic variation within and among
+% natural populations to identify independent evolutionary lineages (i.e.,
+% species) and infer their demographic histories and relationships, testing for
+% patterns predicted by current ecological factors and historical events.
+We use a broad suite of methods in this endeavor, including
+%%%  Shared ancestry is a fundamental property of life.
+%%%  By providing a framework of accounting for the inherent
+%%%  % nonindependence
+%%%  % dependence
+%%%  covariation
+%%%  in biological data created by shared evolutionary history,
+%%%  phylogenetics is rapidly becoming the statistical foundation of comparative
+%%%  biology.
+%%%  While research interests in my lab
+%%%  are very diverse,
+%%%  % span biogeography, speciation, and molecular and genome evolution,
+%%%  \textbf{\textit{all of our work is unified by our common goal of using
+%%%          phylogenetics to infer and explicitly account for shared ancestry in
+%%%          our approaches to better understand
+%%%          processes of evolution and biological diversification}}.
+%%%          % evolution and biodiversity}}.
+%%%  My lab uses a broad suite of methods in this endeavor, including
 % collection-based fieldwork,
 % fieldwork,
 % collecting genome-wide DNA sequence data via next-generation sequencing (NGS)
@@ -146,6 +146,15 @@ and
     %   Conservation genetics
 
 \section*{Current and Future Research}
+Below, I include short and long-term plans for funding the research in my
+lab, which, given my current position, is geared toward opportunities in the
+United States.
+However, if I were fortunate enough to join the Department of Biology at the
+University of Victoria, I am confident that the research summarized below would
+be competitive for Discovery Grants and other funding opportunities from the
+NSERC of Canada.
+
+
 % Generally, my lab is developing and implementing novel evolutionary genetic
 % methods,
 % collecting genomic datasets from 
