--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -213,7 +213,7 @@ We are currently collecting genomic data from several genera of geckos that are
 co-distributed across much of this region.
 Our recent fieldwork in Indochina has added to our geographic sampling of these
 three genera, and will allow us to use our new methods to test for patterns
-predicted by patterns of diversification across both continental and oceanic
+predicted by processes of diversification across both continental and oceanic
 Southeaset Asia.
 % To use this method to test several long-standing biogeographical
 % hypotheses across Southeast Asia,
