Tailoring for Rice.
Removing museum stuff from intro, and making bib footnotes larger.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -2,11 +2,12 @@
 Elucidating answers to this question, in its broadest sense, is the primary
 motivation of my lab group.
 While research intersts in my lab are diverse, our work is unified by
-(1) benefiting from, and contributing to, the rich information housed in
-biodiversity research collections
-and
-(2) using
+% (1) benefiting from, and contributing to, the rich information housed in
+% biodiversity research collections
+% and
+% (2) using
 % (2) the use of
+using
 phylogenetics to infer and explicitly account for shared ancestry in our
 approaches to better understand processes of evolution and diversification.
 % To address this question, I use patterns of genetic variation within and among
@@ -266,7 +267,7 @@ zoonotic infectious diseases in human populations has motivated research into
 the ecological processes responsible for this pattern.
 Sarah Zohdy, Tonia Schwartz, and I have proposed an evolutionary mechanism for
 this pattern that can complement ecological
-perspectives\footnote{\label{Zohdy19}\shortfullcite{Zohdy2019}\hspace{-0.8em}}.
+perspectives\footnote{\label{Zohdy19}\shortfullcite{Zohdy2019}\hspace{-0.6em}}.
 As gene flow decreases between habitat fragments, the populations inhabiting
 them will begin to diverge due to mutations and genetic drift.
 In addition, the lack of gene flow allows mammalian hosts, obligate
