--- a/research-statement-jro.tex
+++ b/research-statement-jro.tex
@@ -67,7 +67,8 @@
     bibencoding=utf8,
     date=year]{biblatex}
 
-\newrobustcmd*{\shortfullcite}{\AtNextCite{\renewbibmacro{title}{}\renewbibmacro{in:}{}\renewbibmacro{number}{}}\scriptsize\hspace{-0.9em}\fullcite}
+% \newrobustcmd*{\shortfullcite}{\AtNextCite{\renewbibmacro{title}{}\renewbibmacro{in:}{}\renewbibmacro{number}{}}\scriptsize\hspace{-0.9em}\fullcite}
+\newrobustcmd*{\shortfullcite}{\AtNextCite{\renewbibmacro{title}{}\renewbibmacro{in:}{}\renewbibmacro{number}{}}\hspace{-0.6em}\fullcite}
 
 \bibliography{references}
 
