Updating gecko section of generalized-phylo proj.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -207,14 +207,14 @@ We have implemented this approach in
 \href{http://phyletica.org/ecoevolity/}{ecoevolity}
 and are currently testing it using simulations.
 
-The development of this new statistical phylogenetic framework was motivated by
+One motivation for developing of this new statistical phylogenetic framework is
 our desire to test several long-standing biogeographical hypotheses to explain
 the distribution of the rich biodiversity across Southeast Asia.
 We are currently collecting genomic data from several genera of geckos that are
 co-distributed across much of this region.
 Our recent fieldwork in Indochina has added to our geographic sampling of these
 three genera, and will allow us to use our new methods to test for patterns
-predicted by processes of diversification across both continental and oceanic
+predicted by processes of diversification across both mainland and insular
 Southeaset Asia.
 % To use this method to test several long-standing biogeographical
 % hypotheses across Southeast Asia,
