Working on gen-phylo gecko section.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -207,10 +207,10 @@ We have implemented this approach in
 \href{http://phyletica.org/ecoevolity/}{ecoevolity}
 and are currently testing it using simulations.
 
-One motivation for developing of this new statistical phylogenetic framework is
+One motivation for developing this new statistical phylogenetic framework, is
 our desire to test several long-standing biogeographical hypotheses to explain
 the distribution of the rich biodiversity across Southeast Asia.
-We are currently collecting genomic data from several genera of geckos that are
+We are currently collecting genomic data from three genera of geckos that are
 co-distributed across much of this region.
 Our recent fieldwork in Indochina has added to our geographic sampling of these
 three genera, and will allow us to use our new methods to test for patterns
