Fixing intersts -> interests typo.

--- a/research-statement-jro-main.tex
+++ b/research-statement-jro-main.tex
@@ -1,7 +1,7 @@
 \textbf{\textit{What processes control the generation of biodiversity?}}
 Elucidating answers to this question, in its broadest sense, is the primary
 motivation of my lab group.
-While research intersts in my lab are diverse, our work is unified by
+While research interests in my lab are diverse, our work is unified by
 % (1) benefiting from, and contributing to, the rich information housed in
 % biodiversity research collections
 % and
